@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005-2009 Douglas Gilbert.
+ * Copyright (c) 2005-2010 Douglas Gilbert.
  * All rights reserved.
  *
  * Redistribution and use in source and binary forms, with or without
@@ -76,7 +76,7 @@ static int map_if_lk24(int sg_fd, const char * device_name, int rw,
 
 #define MAX_DEV_NAMES 256
 
-static char * version_str = "1.05 20091019 [svn: r134]";
+static char * version_str = "1.05 20100208 [svn: r138]";
 
 
 static struct option long_options[] = {
@@ -97,6 +97,7 @@ static struct option long_options[] = {
     {"num-desc", no_argument, 0, 'n'},
     {"page", required_argument, 0, 'p'},
     {"quiet", no_argument, 0, 'q'},
+    {"readonly", no_argument, 0, 'r'},
     {"set", required_argument, 0, 's'},
     {"save", no_argument, 0, 'S'},
     {"transport", required_argument, 0, 't'},
@@ -118,10 +119,10 @@ usage()
           "              [--dummy] [--flexible] [--get=STR] [--help] "
           "[--hex] [--inquiry]\n"
           "              [--long] [--num-desc] [--page=PG[,SPG]] [--quiet] "
-          "[--save]\n"
-          "              [--set=STR] [--six] [--transport=TN] [--vendor=VN] "
-          "[--verbose]\n"
-          "              [--version] DEVICE [DEVICE...]\n\n"
+          "[--readonly]\n"
+          "              [--save] [--set=STR] [--six] [--transport=TN] "
+          "[--vendor=VN]\n"
+          "              [--verbose] [--version] DEVICE [DEVICE...]\n\n"
           "       sdparm --enumerate [--all] [--inquiry] [--long] "
           "[--page=PG[,SPG]]\n"
           "              [--transport=TN] [--vendor=VN]\n"
@@ -153,6 +154,10 @@ usage()
           "enumerate\n"
           "    --quiet | -q          suppress device vendor/product/"
           "revision string line\n"
+          "    --readonly | -r       force read-only open of DEVICE (def: "
+          "either\n"
+          "                          read-write or read-only). For ATA "
+          "disks\n"
           "    --save | -S           place mode changes in saved page as "
           "well\n"
           "    --set=STR | -s STR    set field value(s)\n"
@@ -1874,10 +1879,10 @@ main(int argc, char * argv[])
         int option_index = 0;
 
 #ifdef SG_LIB_WIN32
-        c = getopt_long(argc, argv, "6aBc:C:dDefg:hHilM:np:qs:St:vVw",
+        c = getopt_long(argc, argv, "6aBc:C:dDefg:hHilM:np:qrs:St:vVw",
                         long_options, &option_index);
 #else
-        c = getopt_long(argc, argv, "6aBc:C:dDefg:hHilM:np:qs:St:vV",
+        c = getopt_long(argc, argv, "6aBc:C:dDefg:hHilM:np:qrs:St:vV",
                         long_options, &option_index);
 #endif
         if (c == -1)
@@ -1968,6 +1973,9 @@ main(int argc, char * argv[])
             } else
                 page_str = optarg;
             break;
+        case 'r':
+            ++opts.read_only;
+            break;
         case 's':
             set_str = optarg;
             rw = 1;
@@ -2027,6 +2035,9 @@ main(int argc, char * argv[])
             return SG_LIB_SYNTAX_ERROR;
         }
     }
+
+    if (opts.read_only)
+        rw = 0;         // override any read-write settings
 
     if ((!!get_str + !!set_str + !!clear_str) > 1) {
         fprintf(stderr, "Can only give one of '--get=', '--set=' and "
@@ -2163,6 +2174,8 @@ main(int argc, char * argv[])
             sdp_enumerate_commands();
             return SG_LIB_SYNTAX_ERROR;
         }
+        if (opts.read_only)
+            rw = 0;         // override any read-write settings
     } else {
         /* assume mode pages */
         if (pn < 0) {
